# qt-extensions-networking

./: CMakeLists.txt  LICENSE
include/QtExtensionsNetworking/: IConnectable  SeamlessUDPSocket  UDPSocket
src/c++/: iconnectable.h  seamlessudpsocket.c++  seamlessudpsocket.h  udpsocket.c++  udpsocket.h  utils.c++  utils.h
